--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,6 +119,7 @@ a {
 .menu-btn i {
     font-size: 2.8rem;
     color: var(---colorUno);
+    margin-right: 2rem;
 }
 
 .menu .content {
@@ -146,7 +147,6 @@ a {
     left: -100%;
     height: 100vh;
     width: 100%;
-    /* max-width: 30rem; */
     background-color: rgb(36, 36, 36);
     display: block;
     margin-top: 0;
@@ -257,18 +257,18 @@ a {
     background-image: url(../img/img-header.png);
     background-position: bottom center;
     background-repeat: no-repeat;
-    background-size: 30rem;
+    background-size: 35rem;
     margin-top: 5rem;
     padding: 2rem;
     color: var(---blanco);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     .cabecera .help {
         grid-template-rows: unset;
         grid-template-columns: repeat(2, 1fr);
         background-position: right center;
-        background-size: 45rem;
+        background-size: 50rem;
         row-gap: 0;
 
 
