--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2? family= Lato:wght@700 & display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 
 :root {
     /* colores */
@@ -30,11 +28,12 @@ html {
 }
 
 body {
-
     background-color: var(---oscuro);
     font-family: var(--fonts-primary);
     font-size: 1.6rem;
     line-height: 1.5;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 /* GLOBALES PARA EL PROYECTO */
@@ -119,7 +118,7 @@ a {
 .menu-btn i {
     font-size: 2.8rem;
     color: var(---colorUno);
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
 
 .menu .content {
